--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ cw20 = "0.8.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
+rand = "0.8.5"
 
 [dependencies.cw0]
 version = "0.8.1"
