--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
 rand = "0.8.5"
+rand_seeder = "0.2.3"
+rand_pcg = "0.3.1"
 
 [dependencies.cw0]
 version = "0.8.1"
